# welsh-csc

./: .gitignore  Pipfile  README.md  setup.cfg
welsh_csc/: __init__.py  __main__.py  chop_data.py  click_ext.py  get_data.py  get_meta.py  make_labels.py  make_mono.py  util.py
