[metadata]
version = 0.0.1
name = welsh_csc
author = Florian Breit <florian@florian.me.uk>
author_email = florian@florian.me.uk
description = A tool for working with the Welsh Controlled Speech Corpus.
# long_description = file: README.md
# long_description_content_type = text/markdown
# license = [NEED TO DECIDE ON LICENSE]
# license_files = LICENSE
url = https://github.com/thatfloflo/welsh-csc
project_urls =
    Bug Tracker = https://github.com/thatfloflo/welsh-csc/issues
classifiers =
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Text Processing :: Linguistic
    Topic :: Utilities

[options]
zip_safe = True
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires =
  click
  requests

[flake8]
max-line-length=100
max-complexity=6
inline-quotes=double
docstring-convention=google